--- a/src/components/Sidebar/index.module.css
+++ b/src/components/Sidebar/index.module.css
@@ -1,6 +1,6 @@
 .navbar {
   background-color: var(--mantine-color-body);
-  height: 700px;
+  /* height: 700px; */
   width: 300px;
   padding: var(--mantine-spacing-md);
   padding-top: 0;
@@ -75,20 +75,21 @@
   pointer-events: none;
 }
 
-.collections {
+.files {
   padding-left: calc(var(--mantine-spacing-md) - 6px);
   padding-right: calc(var(--mantine-spacing-md) - 6px);
   padding-bottom: var(--mantine-spacing-md);
 }
 
-.collectionsHeader {
+.filesHeader {
   padding-left: calc(var(--mantine-spacing-md) + 2px);
   padding-right: var(--mantine-spacing-md);
   margin-bottom: 5px;
 }
 
-.collectionLink {
-  display: block;
+.fileLink {
+  display: flex;
+  align-items: center;
   padding: 8px var(--mantine-spacing-xs);
   text-decoration: none;
   border-radius: var(--mantine-radius-sm);
