--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,20 @@
+* { 
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body, .app, .app-content {
+  min-height: 100vh;
+  width: 100%;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
     Arial, sans-serif;
   margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+  /* max-width: 38rem; */
+  /* padding: 2rem;
+  background: #333; 
+  color: white; */
 }
