--- a/src/components/EditorView/index.module.css
+++ b/src/components/EditorView/index.module.css
@@ -1,12 +1,14 @@
 .editor {
-  height: 100%;
+  height: 100vh;
+  width: 100%;
+  overflow: auto;
 }
 
 .scrollarea {
   height: unset;
-  
+  width: 100%;
 }
 
 .mantine-ScrollArea-viewport > div {
-  height: 100%
+  /* height: 100% */
 }
