--- a/src/components/Sidebar/index.module.css
+++ b/src/components/Sidebar/index.module.css
@@ -1,6 +1,11 @@
 .navbar {
+  position: absolute;
+  overflow-y: auto;
+  z-index: 100;
+  top: 0;
+  left: 0;
   background-color: var(--mantine-color-body);
-  /* height: 700px; */
+  height: 100vh;
   width: 300px;
   padding: var(--mantine-spacing-md);
   padding-top: 0;
@@ -90,7 +95,7 @@
 .fileLink {
   display: flex;
   align-items: center;
-  padding: 8px var(--mantine-spacing-xs);
+  padding: 4px var(--mantine-spacing-xs);
   text-decoration: none;
   border-radius: var(--mantine-radius-sm);
   font-size: var(--mantine-font-size-xs);
