--- a/src/components/UserButton/index.module.css
+++ b/src/components/UserButton/index.module.css
@@ -1,7 +1,7 @@
 .user {
   display: block;
   width: 100%;
-  padding: var(--mantine-spacing-md);
+  padding: var(--mantine-spacing-md) !important;
   color: light-dark(var(--mantine-color-black), var(--mantine-color-dark-0));
 
   @mixin hover {
@@ -10,4 +10,10 @@
       var(--mantine-color-dark-8)
     );
   }
+}
+
+.userEmail {
+  max-width: 120px;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
